[package]
name = "org2fullcalendar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
orgize = {  path = "../orgize" ,  features = ["chrono", "ser"] }
chrono = { version = "0.4.19", features = ["serde"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json5 = "0.4.1"
glob= "0.3.0"
